# Dynamic-Open-Set-Post-Processing-for-Intersectional-Fairness-in-Text-to-Image-Diffusion-Models

./: .env.example  .gitignore  CRAFT_GC_Colab.ipynb  CRAFT_GC_Colab_Result.ipynb  README.md  README_SPACE.md  app.py  pyproject.toml  requirements-space.txt  requirements.txt
craft-gc-paper/: README.md  SPRINGER.md  main-springer.tex  main.tex  references.bib
craft-gc-paper/figures/: architecture.tex
craft_gc/: __init__.py
craft_gc/benchmark/: __init__.py  gcfairbench.py  sampling.py
craft_gc/detector/: __init__.py  cultural_attribute_detector.py  geo_cultural_taxonomy.py
craft_gc/estimator/: __init__.py  bias_direction_estimator.py  contrastive_pairs.py  sd_bias_direction_estimator.py
craft_gc/evaluation/: __init__.py  cfs_metric.py  cofs_metric.py  stochastic_variance.py
craft_gc/pipeline/: __init__.py  craft_gc_pipeline.py
craft_gc/steering/: __init__.py  cross_attention_steering.py  embedding_steering.py  timestep_scheduler.py
notebooks/: CRAFT_GC_Colab.ipynb
results/: ablation_results.json  embedding_eval.csv  embedding_eval_50.csv  embedding_summary.json  image_eval.csv  paper_results.json  paper_results_full.json  variance.json
scripts/: build_architecture_figure.py  colab_run_stage_b.py  evaluate_embeddings.py  evaluate_hash_embedding.py  evaluate_images.py  evaluate_lexical_proxy.py  generate_paper_results.py  make_qualitative_grid.py  merge_paper_results.py  plot_figures.py  push_to_github.sh  run_ablation.py  run_full_experiment.py  run_pilot_images.py  summarize_results.py  update_image_table.py  verify_steering.py  visualize_results.py
(+6 files in other folders)
